--- a/src/App.css
+++ b/src/App.css
@@ -25,15 +25,7 @@
   padding: 16px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a {
+  color: #09f;
+  font-size: 30px;
 }
