--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-content {
-  background-color: #282c34;
+  background-color: #232121;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,10 +11,8 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  padding: 16px;
 }
 
-a {
-  color: #09f;
-  font-size: 30px;
+.Gif-content {
+  padding-top: 100px;
 }
