--- a/src/components/Gif/styles.css
+++ b/src/components/Gif/styles.css
@@ -2,15 +2,15 @@
     border: 1px solid #eee;
     border-radius: 6px;
     display: flex;
-    width: 100%;
-    margin: 16px;
+    width: calc(50% - 16px);
+    margin-bottom: 16px;
     flex-direction: column;
     padding: 32px;
     color: white;
     text-decoration: none;
 }
 
-.Guf h4 {
+.Gif h4 {
     margin: 0;
 }
 
